fix alignment issues css

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -558,7 +558,6 @@ color scheme. See readme.md*/
 }
 input[type=range]::-webkit-slider-thumb {
   border-radius: 50%;
-  margin-bottom: 6px;
   width: 17.5px;
   height: 17.5px;
 }
